docs/tests/typing/bad/testfile-return-1.cpp
class S { public: int a; };
S f() { return 1; }
int main() { }
